--- a/src/css/hub.css
+++ b/src/css/hub.css
@@ -3,3 +3,12 @@
   width: 100%;
   background-color: orange;
 }
+#box_hub_content {
+  height: 100%;
+  width: 100%;
+  background-color: rgb(255, 85, 0);
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+}
