--- a/src/css/task.css
+++ b/src/css/task.css
@@ -4,6 +4,7 @@
   margin-top: 2rem;
   background-color: grey;
   display: inline-block;
+  height: 30rem;
 }
 #box_task {
   display: flex;
@@ -11,5 +12,5 @@
   justify-content: center;
   align-items: center;
   padding: 1rem 2rem 1rem 2rem;
-  background-color: rgb(55, 153, 61);
+  background-color: rgb(53, 185, 62);
 }
