--- a/src/css/sidebar.css
+++ b/src/css/sidebar.css
@@ -1,10 +1,10 @@
 #master_sidebar_closed {
   position: absolute;
-  left: -14rem;
+  left: -15rem;
   display: inline-block;
   height: 100vh;
   width: 15rem;
-  background-color: grey;
+  background-color: rgb(196, 138, 58);
   transition-duration: 0.20s;
 }
 #master_sidebar_open {
@@ -34,5 +34,5 @@
   width: 3rem;
   position: absolute;
   top: 35%;
-  left: 95%;
+  left: 100%;
 }
