--- a/src/css/taskImportanceKey.css
+++ b/src/css/taskImportanceKey.css
@@ -13,7 +13,7 @@
 }
 .importance_key {
   background-color: grey;
-  outline: 2px solid black;
+  outline: 1px solid black;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -23,4 +23,32 @@
   color: white;
   margin-top: 2rem;
   margin-bottom: 2rem;
+}
+
+.importance_key h3 {
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
+
+.importance_key h2 {
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
+
+#pirate_map_pic {
+  width: 10rem;
+  height: 10rem;
+}
+
+#info_key {
+  flex-wrap: wrap;
+  font-size: 0.75rem;
+  text-align: center;
+  background-color: rgb(189, 189, 189);
+}
+
+#info_key p{
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  font-weight: bold;
 }
